<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.fragments.characters.dialogs.FilterDialogFragment">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:backgroundTint="@color/dark_jungle_green"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_filter_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/status"
                android:textColor="@color/white"
                app:layout_constraintEnd_toStartOf="@id/tv_filter_gender"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/filter_radio_group_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_filter_status"
                app:layout_constraintStart_toStartOf="@id/tv_filter_status"
                app:layout_constraintTop_toTopOf="@id/tv_filter_status">

                <RadioButton
                    android:id="@+id/radio_button_alive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alive"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_button_dead"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dead"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_filter_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginTop="24dp"
                android:text="@string/gender"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/filter_radio_group_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_filter_gender"
                app:layout_constraintStart_toStartOf="@id/tv_filter_gender"
                app:layout_constraintTop_toTopOf="@id/tv_filter_gender">

                <RadioButton
                    android:id="@+id/radio_button_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_button_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/tv_filter_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/species"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_filter_gender"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/filter_radio_group_species"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_filter_species"
                app:layout_constraintStart_toStartOf="@id/tv_filter_species"
                app:layout_constraintTop_toTopOf="@id/tv_filter_species">

                <RadioButton
                    android:id="@+id/radio_button_human"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/human"
                    android:textColor="@color/white" />

                <RadioButton
                    android:id="@+id/radio_button_alien"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alien"
                    android:textColor="@color/white" />
            </RadioGroup>

            <TextView
                android:id="@+id/button_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="12dp"
                android:backgroundTint="@color/gray_c8"
                android:text="@string/enter"
                android:textColor="@color/vivid_orange"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


</FrameLayout>